# easy-min-max

./: Cargo.toml  README.md
src/: lib.rs
