[package]
name = "min-max-macros"
version = "0.1.0"
description = "Easy to use macros for min and max. Works with no_std"
edition = "2021"
authors = ["Roland Strasser <rol1510@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rol1510/min-max-macros"
keywords = ["min", "max", "minimum", "maximum", "no_std"]

[dependencies]
